[package]
name = "simple-request"
version = "0.1.0"
authors = ["Sascha Stieglitz <sascha.stieglitz@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
tokio = { version = "0.2.22", features = ["macros"] }
